k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-mailhog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-mailhog
  template:
    metadata:
      labels:
        app: django-mailhog
    spec:
      containers:
      - name: django-mailhog
        image: 40781998/django-mailhog:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "50m"
        ports:
        - containerPort: 8000
