k8s/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailhog
spec:
  selector:
    matchLabels:
      app: mailhog
  replicas: 1
  template:
    metadata:
      labels:
        app: mailhog
    spec:
      containers:
      - name: mailhog
        image: mailhog/mailhog:v1.0.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "50m"
        ports:
        - containerPort: 1025
          name: smtp
        - containerPort: 8025
          name: http

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-mailhog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-mailhog
  template:
    metadata:
      labels:
        app: django-mailhog
    spec:
      containers:
      - name: django-mailhog
        image: 40781998/django-mailhog:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "50m"
        ports:
        - containerPort: 8000
