k8s/backend-service.yaml
 apiVersion: v1
kind: Service
metadata:
  name: django-mailhog-service
spec:
  type: LoadBalancer
  selector:
    app: django-mailhog
  ports:
  - name: http
    port: 8000
    targetPort: 8000
