k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailhog-service
spec:
  type: NodePort
  selector:
    app: mailhog
  ports:
  - name: smtp
    port: 1025
    targetPort: smtp
  - name: http
    port: 8025
    targetPort: http

---

apiVersion: v1
kind: Service
metadata:
  name: django-mailhog-service
spec:
  type: NodePort
  selector:
    app: django-mailhog
  ports:
  - name: http
    port: 8000
    targetPort: 8000
